- The stream sidebar is now located on the right of the Stream. - When posting a status, the status window will now properly slide off the page as intended. - The dimming behind the status window has been reduced so content is readable. - The top navigation bar has been given the correct borders and now fills the correct page width. - The stream notice text size has been reduced. - Your current character (avatar) is now displayed while posting a status, so the player is aware which will be used. - Cleaned up our CSS and organized everything.
git-svn-id: https://subversion.assembla.com/svn/mapler-me@782 7cbc8f23-9b70-4854-b091-be65f742de0c

--- a/trunk/website/inc/css/main.css
+++ b/trunk/website/inc/css/main.css
@@ -12,7 +12,8 @@ header .sticky-nav {
 	height: 60px;
 	z-index: 1001;
 	margin:0 auto;
-	
+	padding-left: 20px;
+	padding-right: 20px;
 	border-bottom: 1px solid #fafafa;
 	background: #f6f6f6;
 	background: url(data:image/svg+xml;base64,PD94bWwgdmVyc2lvbj0iMS4wIiA/Pgo8c3ZnIHhtbG5zPSJod…EiIGhlaWdodD0iMSIgZmlsbD0idXJsKCNncmFkLXVjZ2ctZ2VuZXJhdGVkKSIgLz4KPC9zdmc+);
@@ -27,9 +28,8 @@ header .sticky-nav {
 	-moz-box-shadow: 0px 1px 1px rgba(0,0,0,.15), 0px 2px 1px rgba(0,0,0,.10), 0px 3px 1px rgba(0,0,0,.05);
 	box-shadow: 0px 1px 1px rgba(0,0,0,.15), 0px 2px 1px rgba(0,0,0,.10), 0px 3px 1px rgba(0,0,0,.05);
 	margin-bottom: 80px;
-	border-radius: 5px;
-	-webkit-border-radius: 5px;
-	-moz-border-radius: 5px;
+	border-bottom-left-radius: 5px;
+	border-bottom-right-radius: 5px;
 	
 	-webkit-box-shadow: 0 1px 5px rgba(0, 0, 0, 0.55);
 	-moz-box-shadow: 0 1px 5px rgba(0, 0, 0, 0.55);
